overflow fix

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
 
   --blob-color-1: rgb(var(--blue-rgb));
   --blob-color-2: dodgerblue;
+  /* max-height: 100vh;
+  max-width: 100vw; */
+
+  width: 100%;
+  height: 100%;
   margin: auto auto;
 }
 
@@ -14,21 +19,25 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   display: grid;
   place-items: center;
   background-color: rgb(var(--background-rgb));
   margin: 0rem;
   overflow: hidden;
+  /* overflow-x: hidden; */
+  /* background-color: red; */
 }
 
 .screen {
-  width: 500px;
+  /* width: 500px; */
   display: flex;
   border: 3px solid rgb(var(--primary-rgb) / 80%);
   aspect-ratio: 10 / 16;
   border-radius: 1rem;
   background-color: rgb(var(--primary-rgb) / 15%);
+  /* background-color: green; */
   overflow: hidden;
   position: relative;
   z-index: 10;
@@ -38,11 +47,7 @@ body {
   }
   @media screen and (min-width: 698px) {
     width: 320px;
-    overflow: auto;
-  }
-  @media screen and (max-width: 698px) {
-    /* width: 320px; */
-    overflow: hidden;
+    /* overflow: auto; */
   }
 }
 
@@ -55,6 +60,9 @@ body {
   left: 50%;
   translate: -50% 0%;
   background-color: white;
+  overflow: hidden;
+  /* max-height: 100vh;
+  max-width: 100vw; */
 }
 
 .screen:before {
@@ -88,6 +96,7 @@ body {
     transparent 3px,
     transparent 9px
   );
+
   background-size: 100% 9px;
   height: 100%;
   width: 100%;
@@ -292,6 +301,8 @@ body {
 }
 
 #blob {
+  /* max-height: 100vh;
+  max-width: 100vw; */
   background-color: white;
   height: 34vmax;
   aspect-ratio: 1;
@@ -307,19 +318,26 @@ body {
   );
   animation: rotate 20s infinite;
   opacity: 0.5;
+  overflow: hidden;
 
-  /* @media screen and (max-width: 767px) { */
-  /* display: none; */
-  /* overflow: hidden; */
-  /* } */
+  @media screen and (max-width: 767px) {
+    /* display: none; */
+    overflow: hidden;
+    /* height: 16vmax; */
+    /* animation: none; */
+  }
 }
 
 #blur {
-  height: 100%;
+  height: 110%;
   width: 100%;
   position: absolute;
   z-index: 2;
   backdrop-filter: blur(12vmax);
+  overflow: hidden;
+
+  @media screen and (max-width: 767px) {
+  }
 
   /* @media screen and (max-width: 767px) { */
   /* display: none; */
